# DataProcessingFramework

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  llava_captioning.py  pyproject.toml  requirements.txt  requirements_filters.txt  setup.py  simple_example.py
.github/workflows/: code-quality.yml  pytest.yml
DPF/: __init__.py  config_fabric.py  configs.py  dataset_reader.py  dataset_reader_utils.py  datatypes.py  modalities.py  types.py
DPF/configs/: __init__.py  dataset_config.py  files_config.py  sharded_config.py  sharded_files_config.py  shards_config.py
DPF/connectors/: __init__.py  connector.py  errors.py  local_connector.py  s3_connector.py
DPF/dataloaders/: __init__.py  dataloader_utils.py  files_dataset.py  shards_dataset.py  text2image.py  utils.py
DPF/dataloaders/deprecated/images/: __init__.py  universal_dataloader.py
DPF/dataloaders/images/: __init__.py  raw_dataset.py  shards_dataset.py  universal_dataloader.py  utils.py
DPF/filesystems/: __init__.py  filesystem.py  localfilesystem.py  s3filesystem.py
DPF/filters/: __init__.py  base_images_info_filter.py  column_filter.py  complex_filter.py  data_filter.py  filter.py  gather_base_images_info.py  hashes_filter.py  multigpu_filter.py  ruclip_filter.py  t2ifilter.py
DPF/filters/audios/: audio_filter.py  info_filter.py
DPF/filters/images/: aesthetic_filter.py  aesthetic_improved_filter.py  base_images_info_filter.py  blip_captioning_filter.py  blip_filter.py  cliplabels_filter.py  complexity_filter.py  dummy_gpu_filter.py  face_focus_filter.py  focus_peaking_filter.py  grayscale_filter.py  hash_filters.py  hashes_filter.py  img_filter.py  info_filter.py  llava16_captioning_filter.py  llava34b_captioning_filter.py  llava_captioning_filter.py  noise_estimation_filter.py  nsfw_filter.py  ocr_filter.py  oily_skin_filter.py  text_detection_filter.py  watermarks_filter.py
DPF/filters/images/ocr_model/: dataset.py  model.py  utils.py
DPF/filters/images/ocr_model/modules/: prediction.py  transformation.py
DPF/filters/text/: lang_filters.py  regex.py  regex_filter.py  text_filter.py
DPF/filters/text2image/: blip_filter.py  clip_filter.py  ruclip_filter.py  t2i_filter.py  t2ifilter.py
DPF/filters/texts/: google_translate_filter.py  lang_filter.py  regex_filter.py  regexs.py  text_filter.py
DPF/filters/utils/: __init__.py  fp16_module.py  utils.py
DPF/filters/videos/: cogvlm2_filter.py  dover_filter.py  farneback_filter.py  grounding_gpt_filter.py  image_filter_adapter.py  info_filter.py  lita_filter.py  pllava_filter.py  pllava_filter_13b.py  raft_filter.py  rpknet_filter.py  structural_dynamics_filter.py  video_filter.py  video_llava_filter.py  videohash_filter.py
DPF/filters/videos/captioners/video_llava/: inference.py  mm_utils.py
DPF/filters/videos/captioners/video_llava/model/: builder.py
DPF/filters/videos/grounding_gpt/lego/: LEGO.py  __init__.py  conversation.py  mm_utils.py  utils.py
DPF/filters/videos/grounding_gpt/lego/model/: builder.py
DPF/filters/videos/grounding_gpt/lego/serve/: cli.py  gradio_utils.py  gradio_web_server.py
DPF/filters/videos/grounding_gpt/lego/train/: llama_flash_attn_monkey_patch.py  train.py  train_mem.py
DPF/filters/videos/grounding_gpt/video_llama/: __init__.py
DPF/filters/videos/raft_core/: corr.py  download.py  extractor.py  model.py  update.py  utils.py
DPF/formatters/: __init__.py  formatter.py  images_formatter.py  t2i_formatter.py  text2image_formatter.py
DPF/helpers/: dataframe_changer.py  dataframe_reader.py
DPF/pipelines/: __init__.py  filter_pipeline.py  images_pipeline.py  pipeline_stages.py  types.py
DPF/processors/: __init__.py  files_processor.py  processor.py  processor_mixins.py  sharded_files_processor.py  sharded_processor.py  shards_processor.py
DPF/processors/deprecated/images/: images_processor.py
DPF/processors/deprecated/text2image/: raw_processor.py  shards_processor.py  t2i_processor.py
DPF/processors/helpers/: __init__.py  dataframe_helper.py
DPF/processors/images/: __init__.py  images_processor.py
DPF/processors/text2image/: raw_processor.py  shards_processor.py  t2i_processor.py
DPF/processors/utils/: shards_generator.py
DPF/processors/writers/: __init__.py  filewriter.py  rawfilewriter.py  sharded_files_writer.py  shards_writer.py  shardsfilewriter.py  utils.py
DPF/transforms/: __init__.py  base_file_transforms.py  image_resize_transforms.py  image_video_resizer.py  resizer.py  video_ffmpeg_transforms.py  video_fps_transforms.py  video_resize_transforms.py
DPF/utils/: __init__.py  constants.py  image_utils.py  logger.py  utils.py
DPF/validators/: __init__.py  errors.py  raw_validator.py  shards_validator.py  t2i_validator.py  text2image_validator.py  utils.py  validator.py
DPF/validators/format_validators/: __init__.py  errors.py  files_validator.py  sharded_files_validator.py  sharded_validator.py  shards_validator.py
DPF/validators/text2image/: __init__.py  raw_validator.py  shards_validator.py  t2i_validator.py
docs/: complex_filter.md  filters.md  formats.md  multi_gpu_filter.md  pipelines.md  processor.md  transforms.md
examples/: dpf_filter.ipynb  explore_text2image_dataset.ipynb  filter_text2image_dataset.ipynb  image_filters_example.ipynb  pipeline_video_example.ipynb  process_dataset_example.ipynb  text_filters_example.ipynb  video_filters_example.ipynb
examples/example_dataset/: 0.csv  1.csv  2.csv  2.tar
examples/example_video_dataset/: 0.csv
requirements/: requirements_filters.txt  requirements_video_llava.txt
scripts/: multi_gpu_filter.py
tests/: test_column_filters.py  test_complex_filter.py  test_configs.py  test_filesystem.py  test_image_filters.py  test_pipelines.py  test_readers.py  test_resizer.py  test_validators.py  test_writers.py
tests/datasets/files_bad_image/: data.csv
tests/datasets/files_correct/: data.csv
tests/datasets/sharded_files_wrong_columns/: 0.csv  1.csv
tests/datasets/shards_bad_image/: 0.csv  0.tar
tests/datasets/shards_correct/: 0.tar
tests/datasets/shards_wrong_tar/: 0.tar
(+73 files in other folders)
